--- a/circle.yml
+++ b/circle.yml
@@ -8,12 +8,12 @@ general:
 
 machine:
     environment:
-        $ANDROID_HOME: /usr/local/android-sdk-linux
+        ANDROID_HOME: /usr/local/android-sdk-linux
 
 dependencies:
     override:
         - echo y | android update sdk --no-ui --all --filter tools,platform-tools,build-tools-22.0.1,android-22,extra-google-m2repository,extra-google-google_play_services,extra-android-support
-        - $ANDROID_HOME=/usr/local/android-sdk-linux ./gradlew dependencies
+        - ANDROID_HOME=/usr/local/android-sdk-linux ./gradlew dependencies
 
 test:
     override:
