--- a/circle.yml
+++ b/circle.yml
@@ -12,7 +12,7 @@ machine:
 
 dependencies:
     override:
-        - echo y | android update sdk --no-ui --all --filter tools,platform-tools,build-tools-22.0.1,android-22,extra-google-m2repository,extra-google-google_play_services,extra-android-support,extra-android-repository
+        - echo y | android update sdk --no-ui --all --filter tools,platform-tools,build-tools-22.0.1,android-22,extra-google-m2repository,extra-google-google_play_services,extra-android-support,extra-android-repository,com.android.support:appcompat-v7:22.2.1,com.android.support:design:22.2.1
         - ANDROID_HOME=/usr/local/android-sdk-linux ./gradlew dependencies
 
 
