--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
 language: android
-env:
-  matrix:
-    - ANDROID_SDKS=android-22,sysimg-22  ANDROID_TARGET=android-22  ANDROID_ABI=armeabi-v7a
+android:
+	components:
+	 - build-tools-22.0.1
+	 - android-22
+	 - extra-google-google_play_services
+     - extra-google-m2repository
+     - extra-android-m2repository
+     - addon-google_apis-google-22
