--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,4 @@ android:
 	components:
 	 - android-22
 	 - build-tools-22.0.1
-	 - extra-google-google_play_services
-     - extra-google-m2repository
-     - extra-android-m2repository
-     - addon-google_apis-google-22
+	 - extra
