--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
-android:
-  components:
-    - android-22
-    - build-tools-22.0.1
+language: android
+    android:
+      components:
+        - platform-tool
+        - tool
+        - android-22
+        - build-tools-22.0.1
+        - extra-android-m2repository
+        - extra-google-m2repository
