--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: android
-    android:
-      components:
-        - platform-tool
-        - tool
-        - android-22
-        - build-tools-22.0.1
+android:
+  components:
+    - build-tools-22.0.1
+    - android-22
+    - extra
