--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,17 @@
 language: android
-jdk: oraclejdk7
-env:
-  matrix:
-    - ANDROID_TARGET=android-21  ANDROID_ABI=armeabi-v7a
-
 android:
   components:
     - build-tools-21.1.2
-
+    - android-21
+    - extra-android-m2repository
+    - sys-img-armeabi-v7a-android-21
+    - sys-img-x86-android-21
+before_install:
+ - chmod +x gradlew
 before_script:
-  # Create and start emulator
-  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
-  - emulator -avd test -no-skin -no-audio -no-window &
-  - adb wait-for-device
-  - adb shell input keyevent 82 &
-
-script: ./gradlew connectedAndroidTest
+ - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+ - emulator -avd test -no-skin -no-audio -no-window &
+ - curl http://is.gd/android_wait_for_emulator > android-wait-for-emulator
+ - chmod u+x android-wait-for-emulator
+ - ./android-wait-for-emulator
+ - adb shell input keyevent 82 &
