--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,11 @@
 language: android
+sudo: false
+jdk: openjdk7
 android:
   components:
     - build-tools-21.1.2
-    - android-21
+    - extra-android-support
     - extra-android-m2repository
-    - sys-img-armeabi-v7a-android-21
-    - sys-img-x86-android-21
-before_install:
- - chmod +x gradlew
-before_script:
- - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
- - emulator -avd test -no-skin -no-audio -no-window &
- - curl http://is.gd/android_wait_for_emulator > android-wait-for-emulator
- - chmod u+x android-wait-for-emulator
- - ./android-wait-for-emulator
- - adb shell input keyevent 82 &
+    - android-21
+  licenses:
+    - '.+'
